methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:8: error: not enough arguments for method tourneDroite: (nb: Int)Unit.
Unspecified value parameter nb.
  tourneDroite()
              ^